Added user verification by email

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 DB_URI=<MongoDB Connection String; >
-SECRET_KEY=<your_secret_key_here>
+SECRET_KEY=< A secret key to create a JWT token to access the database>
+SENDGRID_API_KEY=<SendGrid API key >
+BASE_URL=<the main URL of the site>
